oplossingen/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-demo-voorbeeld
  name: nginx-demo-deployment-voorbeeld
  namespace: backend-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-demo-voorbeeld
  template:
    metadata:
      labels:
        app: nginx-demo-voorbeeld
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: html-volume
          configMap:
            name: nginx-demo-html-voorbeeld
