oplossingen/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-service-voorbeeld
  namespace: backend-workshop
spec:
  selector:
    app: nginx-demo-voorbeeld
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
