oplossingen/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-ingress-voorbeeld
  namespace: backend-workshop
spec:
  ingressClassName: nginx
  rules:
  - host: nginx-web-voorbeeld.k8s.eom.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-demo-service-voorbeeld
            port:
              number: 80
